--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,3 +14,6 @@ collections:
     fields:
       - { label: Title, name: title, widget: string }
       - { label: Body, name: body, widget: markdown }
+
+[media]
+  ignoreConfigFile = true
